Adding on attribute to paper-switch

--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
   <head>
     <script src="bower_components/platform/platform.js"></script>
     <link rel="import" href="elements/paper-switch.html">
+    <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <paper-switch></paper-switch>
+    <h1>Switch Demo</h1>
+    <div>
+      <h2>Markup</h2>
+      <code>
+        &lt;paper-switch on=true&gt;&lt;/paper-switch&gt;
+      </code>
+    </div>
+    <div>
+      <h3>Switch On</h3>
+      <paper-switch on=true></paper-switch>
+    </div>
+    <div>
+      <h3>Switch Off</h3>
+      <paper-switch></paper-switch>
+    </div>
   </body>
 </html>
