--- a/elements/paper-switch.html
+++ b/elements/paper-switch.html
@@ -1,11 +1,11 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
-<polymer-element name="paper-switch" noscript>
+<polymer-element name="paper-switch" attributes="on" noscript>
   <template>
     <link href="paper-switch.css" rel="stylesheet">
 
     <label class="label-switch">
-      <input type="checkbox" />
+      <input type="checkbox" checked={{on}} />
       <div class="checkbox"></div>
     </label>
   </template>
