--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Paper-switch by ankurp</title>
@@ -14,62 +15,87 @@
 
     <script src="bower_components/platform/platform.js"></script>
     <link rel="import" href="elements/paper-switch.html">
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="wrapper">
-      <header>
-        <h1>Paper-switch</h1>
-        <p>A Switch Web Component built using Polymer</p>
+        <header>
+            <h1>Paper Switch</h1>
+            <p>A Switch Web Component built using Polymer</p>
 
-        <p class="view"><a href="https://github.com/ankurp/paper-switch">View the Project on GitHub <small>ankurp/paper-switch</small></a></p>
+            <p class="view"><a href="https://github.com/ankurp/paper-switch">View the Project on GitHub <small>ankurp/paper-switch</small></a>
+            </p>
 
 
-        <ul>
-          <li><a href="https://github.com/ankurp/paper-switch/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/ankurp/paper-switch/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/ankurp/paper-switch">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h1>
-<a name="paper-switch" class="anchor" href="#paper-switch"><span class="octicon octicon-link"></span></a>paper-switch</h1>
+            <ul>
+                <li><a href="https://github.com/ankurp/paper-switch/zipball/master">Download <strong>ZIP File</strong></a>
+                </li>
+                <li><a href="https://github.com/ankurp/paper-switch/tarball/master">Download <strong>TAR Ball</strong></a>
+                </li>
+                <li><a href="https://github.com/ankurp/paper-switch">View On <strong>GitHub</strong></a>
+                </li>
+            </ul>
+        </header>
+        <section>
+            <h1>
+                <a name="paper-switch" class="anchor" href="#paper-switch">
+                    <span class="octicon octicon-link"></span>
+                </a>paper-switch
+            </h1>
 
-<p>A Switch Web Component built for Polymer</p>
+            <p>A Switch Web Component built for Polymer</p>
 
-<p><img src="https://raw.githubusercontent.com/ankurp/paper-switch/master/screenshot.png" alt="paper-switch"></p>
+            <h3>Switch Demo</h3>
 
-<h3>
-<a name="setup" class="anchor" href="#setup"><span class="octicon octicon-link"></span></a>Setup</h3>
+            <paper-switch on=true></paper-switch>
 
-<p>Import component using <code>&lt;link rel="import" href="./path/to/paper-switch.html"&gt;</code></p>
+            <h3>
+                <a name="setup" class="anchor" href="#setup">
+                    <span class="octicon octicon-link"></span>
+                </a>Setup</h3>
 
-<p>Then add the following markup</p>
+            <p>Import component using
+                <code>&lt;link rel="import" href="./path/to/paper-switch.html"&gt;</code>
+            </p>
 
-<div class="highlight highlight-html"><pre><span class="nt">&lt;paper-switch&gt;&lt;/paper-switch&gt;</span>
-</pre></div>
+            <p>Then add the following markup</p>
 
-<p>To turn the switch on by default use the <code>on=true</code> attribute</p>
+            <div class="highlight highlight-html"><pre><span class="nt">&lt;paper-switch&gt;&lt;/paper-switch&gt;</span>
+</pre>
+            </div>
 
-<div class="highlight highlight-html"><pre><span class="nt">&lt;paper-switch</span> <span class="na">on=</span><span class="s">true</span><span class="nt">&gt;&lt;/paper-switch&gt;</span>
-</pre></div>
+            <p>To turn the switch on by default use the
+                <code>on=true</code>attribute</p>
 
-<h3>
-<a name="running-demo" class="anchor" href="#running-demo"><span class="octicon octicon-link"></span></a>Running demo</h3>
+            <div class="highlight highlight-html"><pre><span class="nt">&lt;paper-switch</span> <span class="na">on=</span><span class="s">true</span><span class="nt">&gt;&lt;/paper-switch&gt;</span>
+</pre>
+            </div>
 
-<p>First go into the <code>paper-switch</code> directory do a <code>bower install</code> to import all the required components.</p>
+            <h3>
+                <a name="running-demo" class="anchor" href="#running-demo">
+                    <span class="octicon octicon-link"></span>
+                </a>Running demo</h3>
 
-<p>Then run <code>python -m SimpleHTTPServer</code> and go to <code>http://localhost:8000</code></p>
-      </section>
-      <section>
-          <h3>Switch Demo</h3>
-          <paper-switch on=true></paper-switch>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/ankurp">ankurp</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+            <p>First go into the
+                <code>paper-switch</code>directory do a
+                <code>bower install</code>to import all the required components.</p>
+
+            <p>Then run
+                <code>python -m SimpleHTTPServer</code>and go to
+                <code>http://localhost:8000</code>
+            </p>
+        </section>
+        <footer>
+            <p>This project is maintained by <a href="https://github.com/ankurp">ankurp</a>
+            </p>
+            <p>
+                <small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>
+                </small>
+            </p>
+        </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+
+</body>
+
 </html>
