--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="bower_components/platform/platform.js"></script>
-    <link rel="import" href="elements/paper-switch.html">
-    <link href="main.css" rel="stylesheet">
+    <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+    <link rel="import" href="paper-switch.html">
+    <style>
+      body {
+        text-align: center;
+        font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+        background: #f9f9f9;
+      }
+
+      h1, h2, h3 {
+          font-weight: 100;
+      }
+
+      paper-switch {
+        display: block;
+      }
+    </style>
   </head>
   <body>
-    <h1>Switch Demo</h1>
+    <h1>paper-switch Demo</h1>
     <div>
       <h2>Markup</h2>
       <code>
