--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       <div>
         <h3>Switch On</h3>
         <paper-switch value="{{ first }}"></paper-switch>
-        <p> Result: {{ first }} </p>
+        <p> value: {{ first }} </p>
       </div>
       <div>
         <h3>Switch Off</h3>
         <paper-switch value="{{ last }}"></paper-switch>
-        <p> Result: {{ last }} </p>
+        <p> value: {{ last }} </p>
       </div>
     </template>
 
