--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 
     <script src="bower_components/platform/platform.js"></script>
     <link rel="import" href="elements/paper-switch.html">
+    
+    <meta name="twitter:card" content="photo" />
+    <meta name="twitter:site" content="paper-switch" />
+    <meta name="twitter:title" content="AAPL:US Intraday Chart" />
+    <meta name="twitter:image" content="http://www.bloomberg.com/api/intraday/chart/AAPL:US.svg" />
+    <meta name="twitter:url" content="http://www.bloomberg.com/api/intraday/chart/AAPL:US.svg" />
 </head>
 
 <body>
