--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="photo" />
     <meta name="twitter:site" content="paper-switch" />
     <meta name="twitter:title" content="AAPL:US Intraday Chart" />
-    <meta name="twitter:image" content="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
+    <meta name="twitter:image" content="http://www.bloomberg.com/markets/api/charts/sparkline/INDU%3AIND.svg?stroke=4" />
     <meta name="twitter:url" content="http://www.google.com" />
 </head>
 
