--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <meta name="twitter:card" content="photo" />
     <meta name="twitter:site" content="paper-switch" />
     <meta name="twitter:title" content="AAPL:US Intraday Chart" />
-    <meta name="twitter:image" content="http://www.bloomberg.com/markets/api/charts/sparkline/INDU%3AIND.svg?stroke=4" />
-    <meta name="twitter:url" content="http://www.google.com" />
+    <meta name="twitter:image" content="http://www.bloomberg.com/api/intraday/chart/AAPL:US.svg" />
+    <meta name="twitter:url" content="http://www.bloomberg.com/markets" />
 </head>
 
 <body>
